Update font config and default text color

--- a/packages/client/src/assets/styles/_fonts.scss
+++ b/packages/client/src/assets/styles/_fonts.scss
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "League Spartan";
-  src: url("@/assets/fonts/LeagueSpartan-Regular.woff2") format("woff2");
-  font-weight: 400;
+  src: url("@/assets/fonts/LeagueSpartan-VF.woff2") format("woff2-variations");
+  font-weight: 400 700;
   display: swap;
 }
