--- a/packages/client/src/assets/styles/_base.scss
+++ b/packages/client/src/assets/styles/_base.scss
@@ -4,10 +4,11 @@ html {
 
 body {
   font-family: "League Spartan", system-ui, -apple-system, BlinkMacSystemFont,
-    "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
-    "Helvetica Neue", sans-serif;
-  font-size: 1.6rem;
+    "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+    sans-serif;
+  font-size: 2rem;
   line-height: 1.3;
+  color: #181818;
   padding: env(safe-area-inset-top) env(safe-area-inset-right)
     env(safe-area-inset-bottom) env(safe-area-inset-left);
 }
