--- a/packages/client/src/assets/styles/_base.scss
+++ b/packages/client/src/assets/styles/_base.scss
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 html {
   font-size: 62.5%;
 }
@@ -6,7 +10,7 @@ body {
   font-family: "League Spartan", system-ui, -apple-system, BlinkMacSystemFont,
     "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
     sans-serif;
-  font-size: 2rem;
+  font-size: 1.6rem;
   line-height: 1.3;
   color: #181818;
   padding: env(safe-area-inset-top) env(safe-area-inset-right)
