--- a/packages/client/src/assets/styles/_base.scss
+++ b/packages/client/src/assets/styles/_base.scss
@@ -4,6 +4,7 @@
 
 :root {
   --color-alert: #e63946;
+  --font-size--default: 1.8rem;
 }
 
 html {
@@ -14,7 +15,7 @@ body {
   font-family: "League Spartan", system-ui, -apple-system, BlinkMacSystemFont,
     "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
     sans-serif;
-  font-size: 1.6rem;
+  font-size: var(--font-size--default);
   line-height: 1.3;
   color: #181818;
   padding: env(safe-area-inset-top) env(safe-area-inset-right)
